@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.165 2002/02/25 13:54:52 stelian Exp $
+$Id: CHANGES,v 1.166 2002/02/27 09:47:48 stelian Exp $
 
 Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 =======================================================================
@@ -17,6 +17,11 @@ Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 	(though it may be a good idea to upgrade it to a more recent
 	version...). Thanks to Andrew Donkin <ard@waikato.ac.nz> for
 	reporting the build failures.
+
+4.	Fixed a performance problem with the QFA file creation in
+	dump, which made unnecessary seeks on the tape slowing down
+	the dump. Thanks to Andrew Donkin <ard@waikato.ac.nz> for
+	reporting this issue.
 
 Changes between versions 0.4b26 and 0.4b27 (released February 15, 2002)
 =======================================================================
